examples/kubernetes/config-map.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-cm
  template:
    metadata:
      labels:
        app: nginx-cm
    spec:
      containers:
      - name: nginx
        image: nginx:1.22
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx
      volumes:
        - name: config
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
